update to config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,16 @@ jobs:
             pip install --upgrade pip
             pip install -r requirements.txt
 
+  train_model:
+    executor: python-executor
+    steps:
+      - checkout
+      - run:
+          name: Train Model
+          command: |
+            source venv/bin/activate
+            python train.py
+
   run_tests:
     executor: python-executor
     steps:
@@ -40,21 +50,16 @@ jobs:
             . venv/bin/activate
             pip install --upgrade pip
             pip install -r requirements.txt
+            pip install pytest pytest-cov
       - run:
-          name: Run Tests
+          name: Run Unit & Integration Tests
           command: |
             source venv/bin/activate
-            pytest tests/ --junitxml=test-results.xml
-
-  train_model:
-    executor: python-executor
-    steps:
-      - checkout
-      - run:
-          name: Train Model
-          command: |
-            source venv/bin/activate
-            python train.py
+            pytest tests/ --junitxml=test-results.xml --cov=. --cov-report=xml
+      - store_test_results:
+          path: test-results.xml
+      - store_artifacts:
+          path: test-results.xml
 
   build_docker:
     executor: docker-executor
@@ -93,6 +98,7 @@ jobs:
       - run:
           name: Check Model Performance & Retrain
           command: |
+            source venv/bin/activate
             loss=$(python check_loss.py)
             if (( $(echo "$loss > 0.5" | bc -l) )); then
               python retrain.py
@@ -106,15 +112,15 @@ workflows:
       - setup_python_env:
           requires:
             - clone_repo
-      - run_tests:
-          requires:
-            - setup_python_env
       - train_model:
           requires:
-            - run_tests
-      - build_docker:
+            - setup_python_env
+      - run_tests:
           requires:
             - train_model
+      - build_docker:
+          requires:
+            - run_tests
       - push_docker:
           requires:
             - build_docker
