--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,10 @@ jobs:
             pip install --upgrade pip
             pip install -r requirements.txt
             pip install pytest pytest-cov
+            - persist_to_workspace:
+          root: .
+          paths:
+            - venv  # Save venv for later steps
 
   train_model:
     executor: python-executor
